# opencl-task

./: CMakeLists.txt  README.md
src/: main.cpp
src/cl/: multiply.cl  multiply_cl.h
